# PyTasksManager

./: .gitignore  README.md  pyproject.toml  tabs.json  tasks.json
src/pytasksmanager/: __init__.py  app.py  app_deepseek.py  app_main.py
src/pytasksmanager/other/: task_manager.css  version1.py
task_data/: tabs.json
