[project]
name = "pytasksmanager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Esteban RIvera", email = "113285895+EstebanRivera08@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "alive-progress>=3.2.0",
    "textual>=2.1.0",
]

[project.scripts]
pytasksmanager = "pytasksmanager:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
